--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,8 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
-            <version>${hibernate.version}</version>
+            <version>4.3.11.Final</version>
+            <type>jar</type>
         </dependency>
         
         <!-- MySQL -->
