--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <hibernate.version>4.3.11.Final</hibernate.version>
         <mysql.connector.version>5.1.31</mysql.connector.version>
         <jstl.version>1.2</jstl.version>
+        <jackson.library>2.7.5</jackson.library>
     </properties>
     
     <dependencies>
@@ -78,6 +79,13 @@
             <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
             <version>${jstl.version}</version>
+        </dependency>
+        
+        <!--RESTful-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.library}</version>
         </dependency>
     </dependencies>
 
